syntax = "proto3";

message Request {
  // this is actually but we set it as optional. don't ask :d
  uint32 seq = 1;
  uint64 playerId = 2;
  int32 playerToken = 3;
  uint32 entityId = 4;
  Empty getInfo = 8;
  Empty getTime = 9;
  Empty getMap = 10;
  Empty getTeamInfo = 11;
  Empty getTeamChat = 12;
  // AppSendMessage sendTeamMessage = 13;
  Empty getEntityInfo = 14;
  // AppSetEntityValue setEntityValue = 15;
  Empty checkSubscription = 16;
  // AppFlag setSubscription = 17;
  Empty getMapMarkers = 18;
  // AppCameraFrameRequest getCameraFrame = 19;
}

message Message {
  Response response = 1;
  // Broadcast broadcast = 2;
}

message Response {
  uint32 seq = 1;
  Empty success = 4;
  Error error = 5;
  Info info = 6;
  // Time time = 7;
  Map map = 8;
  // TeamInfo teamInfo = 9;
  // TeamChat teamChat = 10;
  // EntityInfo entityInfo = 11;
  // Flag flag = 12;
  // MapMarkers mapMarkers = 13;
  // CameraFrame cameraFrame = 14;

}

message Error {
  string error = 1; 
}

message Info {
  string name = 1;
	string headerImage = 2;
	string url = 3;
	string map = 4;
	uint32 mapSize = 5;
	uint32 wipeTime = 6;
	uint32 players = 7;
	uint32 maxPlayers = 8;
	uint32 queuedPlayers = 9;
	uint32 seed = 10;
	uint32 salt = 11;
}

message Map {
  uint32 width = 1;
  uint32 height = 2;
  bytes jpgImage = 3;
  int32 oceanMargin = 4;
  string background = 6;

  message Monument {
    string token = 1;
    float x = 2;
    float y = 3;
  }

  repeated Monument monuments = 5;

}



message Empty {}
